manager.yaml: Update command to match our image.
Update to match the name of the binary in the container image we build.

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -43,7 +43,7 @@ spec:
     spec:
       containers:
       - command:
-        - /manager
+        - /machine-controller-manager
         image: controller:latest
         imagePullPolicy: Always
         name: manager
