Add HostSelector with MatchLabels field.
This allows specifying match criteria for which BareMetalHost will be
chosen for a given machine.  When specifying MatchLabels, all
specified labels must be present on the BareMetalHost, or it will be
not be considered a match.

This partially implements #66.

--- a/config/crds/baremetal_v1alpha1_baremetalmachineproviderspec.yaml
+++ b/config/crds/baremetal_v1alpha1_baremetalmachineproviderspec.yaml
@@ -19,6 +19,14 @@ spec:
             of an object. Servers should convert recognized schemas to the latest
             internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
           type: string
+        hostSelector:
+          description: HostSelector specifies matching criteria for labels on BareMetalHosts.
+            This is used to limit the set of BareMetalHost objects considered for
+            claiming for a Machine.
+          properties:
+            matchLabels:
+              type: object
+          type: object
         image:
           description: Image is the image to be provisioned.
           properties:
