Add matchExpressions to hostSelector.
This patch adds a matchExpressions field to the hostSelector, which is
a more advanced version of matchLabels.  The expressions still match
on labels, but allow more operators than equals, and allows operating
on a set of possible values.

This partially implements #66.

--- a/config/crds/baremetal_v1alpha1_baremetalmachineproviderspec.yaml
+++ b/config/crds/baremetal_v1alpha1_baremetalmachineproviderspec.yaml
@@ -24,7 +24,26 @@ spec:
             This is used to limit the set of BareMetalHost objects considered for
             claiming for a Machine.
           properties:
+            matchExpressions:
+              description: Label match expressions that must be true on a chosen BareMetalHost
+              items:
+                properties:
+                  key:
+                    type: string
+                  operator:
+                    type: string
+                  values:
+                    items:
+                      type: string
+                    type: array
+                required:
+                - key
+                - operator
+                - values
+                type: object
+              type: array
             matchLabels:
+              description: Key/value pairs of labels that must exist on a chosen BareMetalHost
               type: object
           type: object
         image:
