Update RBAC from upstream docs.
The cluster-api project has docs that describe how to build a
provider.  This patch syncs some recent changes to their documented
RBAC.

https://github.com/kubernetes-sigs/cluster-api/pull/947

--- a/config/rbac/rbac_role.yaml
+++ b/config/rbac/rbac_role.yaml
@@ -9,11 +9,6 @@ rules:
   resources:
   - machines
   - machines/status
-  - machinedeployments
-  - machinedeployments/status
-  - machinesets
-  - machinesets/status
-  - machineclasses
   verbs:
   - get
   - list
@@ -25,8 +20,7 @@ rules:
 - apiGroups:
   - cluster.k8s.io
   resources:
-  - clusters
-  - clusters/status
+  - machineClasses
   verbs:
   - get
   - list
