Added APIEndpoints to BM Cluster Status. Added a start_controller.sh script for kind. Updated to capi release 0.2.2

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_baremetalclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_baremetalclusters.yaml
@@ -32,6 +32,30 @@ spec:
           type: object
         status:
           description: BareMetalClusterStatus defines the observed state of BareMetalCluster
+          properties:
+            apiEndpoints:
+              description: APIEndpoints represents the endpoints to communicate with
+                the control plane.
+              items:
+                description: APIEndpoint represents a reachable Kubernetes API endpoint.
+                properties:
+                  host:
+                    description: Host is the hostname on which the API server is serving.
+                    type: string
+                  port:
+                    description: Port is the port on which the API server is serving.
+                    type: integer
+                required:
+                - host
+                - port
+                type: object
+              type: array
+            ready:
+              description: Ready denotes that the docker cluster (infrastructure)
+                is ready.
+              type: boolean
+          required:
+          - ready
           type: object
       type: object
   version: v1alpha2
