Kube16: Update CI tools

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
 language: go
 sudo: false
 go:
-  - "1.11.5"
+  - "1.12"
 before_install:
-  - ./tools/install_kustomize.sh
-  - ./tools/install_kubebuilder.sh
   - make generate
 env:
   - TARGET=fmt
   - TARGET=vet
   - TARGET=unit
-script: KUBEBUILDER_ASSETS="$(pwd)/kubebuilder/bin/" make $TARGET
+script: KUBEBUILDER_ASSETS="$(pwd)/hack/tools/bin/" make $TARGET
