--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -1,8 +1,15 @@
-resources:
-- manager.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-images:
-- name: controller
-  newName: controller
-  newTag: dev
+
+resources:
+- manager.yaml
+
+generatorOptions:
+ disableNameSuffixHash: true
+
+secretGenerator:
+- name: manager-bootstrap-credentials
+  namespace: system
+  type: Opaque
+  envs:
+  - secrets.txt
