--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -3,7 +3,23 @@ kind: Namespace
 metadata:
   labels:
     control-plane: controller-manager
+    controller-tools.k8s.io: "1.0"
   name: system
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: controller-manager-service
+  namespace: system
+  labels:
+    control-plane: controller-manager
+    controller-tools.k8s.io: "1.0"
+spec:
+  selector:
+    control-plane: controller-manager
+    controller-tools.k8s.io: "1.0"
+  ports:
+  - port: 443
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -12,23 +28,31 @@ metadata:
   namespace: system
   labels:
     control-plane: controller-manager
+    controller-tools.k8s.io: "1.0"
 spec:
   selector:
     matchLabels:
       control-plane: controller-manager
-  replicas: 1
+      controller-tools.k8s.io: "1.0"
   template:
     metadata:
       labels:
         control-plane: controller-manager
+        controller-tools.k8s.io: "1.0"
     spec:
       containers:
       - command:
         - /manager
-        args:
-        - --enable-leader-election
         image: controller:latest
+        imagePullPolicy: Always
         name: manager
+        env:
+          - name: POD_NAMESPACE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
+          - name: SECRET_NAME
+            value: $(WEBHOOK_SECRET_NAME)
         resources:
           limits:
             cpu: 100m
@@ -36,4 +60,23 @@ spec:
           requests:
             cpu: 100m
             memory: 20Mi
+        ports:
+        - containerPort: 9876
+          name: webhook-server
+          protocol: TCP
+        volumeMounts:
+        - mountPath: /tmp/cert
+          name: cert
+          readOnly: true
       terminationGracePeriodSeconds: 10
+      volumes:
+      - name: cert
+        secret:
+          defaultMode: 420
+          secretName: webhook-server-secret
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: webhook-server-secret
+  namespace: system
