Kube16: Update CRDs definitions, roles, rbac, status

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -55,3 +55,23 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - metal3.io
+  resources:
+  - baremetalhosts
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - metal3.io
+  resources:
+  - baremetalhosts/status
+  verbs:
+  - get
+  - patch
+  - update
