--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_baremetalclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_baremetalclusters.yaml
@@ -33,22 +33,6 @@ spec:
           type: object
         spec:
           description: BareMetalClusterSpec defines the desired state of BareMetalCluster.
-          properties:
-            cloudName:
-              description: The name of the cloud to use from the clouds secret
-              type: string
-            cloudsSecret:
-              description: The name of the secret containing the openstack credentials
-              properties:
-                name:
-                  description: Name is unique within a namespace to reference a secret
-                    resource.
-                  type: string
-                namespace:
-                  description: Namespace defines the space within which the secret
-                    name must be unique.
-                  type: string
-              type: object
           type: object
         status:
           description: BareMetalClusterStatus defines the observed state of BareMetalCluster.
@@ -72,7 +56,9 @@ spec:
               type: array
             ready:
               description: Ready denotes that the baremetal cluster (infrastructure)
-                is ready.
+                is ready. In Baremetal case, it does not mean anything for now as
+                no infrastructure steps need to be performed. Required by Cluster
+                API. Set to True by the BaremetalCluster controller after creation.
               type: boolean
           required:
           - ready
