--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_baremetalmachines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_baremetalmachines.yaml
@@ -91,8 +91,8 @@ spec:
               - url
               type: object
             providerID:
-              description: ProviderID will be the container name in ProviderID format
-                (baremetal:////<containername>)
+              description: ProviderID will be the baremetal machine in ProviderID
+                format (baremetal:////<machinename>)
               type: string
             userData:
               description: UserData references the Secret that holds user data needed
@@ -214,7 +214,9 @@ spec:
                 E.g. Pending, Running, Terminating, Failed etc.
               type: string
             ready:
-              description: Ready is the state of the metal3.
+              description: 'Ready is the state of the metal3. TODO : Document the
+                variable : mhrivnak: " it would be good to document what this means,
+                how to interpret it, under what circumstances the value changes, etc."'
               type: boolean
             version:
               description: Version specifies the current version of Kubernetes running
