Fix broken deployment example after BaremetalCluster API changes.
- Updated the example/cluster.yaml
- Updated the image

--- a/examples/cluster/cluster.yaml
+++ b/examples/cluster/cluster.yaml
@@ -19,7 +19,7 @@ apiVersion: infrastructure.cluster.x-k8s.io/v1alpha2
 kind: BareMetalCluster
 metadata:
   name: ${CLUSTER_NAME}
-spec:
-  cloudName: ${CLUSTER_NAME}
-  cloudsSecret:
-    name: cloud-config
+# spec:
+#   cloudName: ${CLUSTER_NAME}
+#   cloudsSecret:
+#     name: cloud-config
