--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_baremetalclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_baremetalclusters.yaml
@@ -33,6 +33,11 @@ spec:
           type: object
         spec:
           description: BareMetalClusterSpec defines the desired state of BareMetalCluster.
+          properties:
+            apiEndpoint:
+              type: string
+          required:
+          - apiEndpoint
           type: object
         status:
           description: BareMetalClusterStatus defines the observed state of BareMetalCluster.
