--- a/hack/Dockerfile.unit
+++ b/hack/Dockerfile.unit
@@ -1,16 +1,6 @@
-FROM registry.access.redhat.com/ubi8/ubi
-
-RUN INSTALL_PKGS=" \
-      golang \
-      make \
-      git \
-      " && \
-    yum install -y $INSTALL_PKGS && \
-    rpm -V $INSTALL_PKGS && \
-    yum clean all
+FROM registry.hub.docker.com/library/golang:1.12
 
 WORKDIR /tools
 COPY /hack/tools /tools
 RUN ./install_kustomize.sh
 RUN ./install_kubebuilder.sh
-RUN mkdir -p /usr/local/kubebuilder/bin && mv bin/* /usr/local/kubebuilder/bin
