Remove v1alpha2 unit test hack and change tmp dir
- a hack was added as long as the unit test job was broken, fixed now
- remove the creation of tmp dir in image due to permission issue

--- a/hack/Dockerfile.unit
+++ b/hack/Dockerfile.unit
@@ -2,8 +2,5 @@ FROM registry.hub.docker.com/library/golang:1.12
 
 WORKDIR /usr/local/kubebuilder
 COPY /hack/tools /usr/local/kubebuilder/
-RUN mkdir -p /tmp/unittests && \
-    mkdir -p /tmp/unittests/hack/tools && \
-    ./install_kustomize.sh && \
-    ./install_kubebuilder.sh && \
-    cp -r /usr/local/kubebuilder/bin /tmp/unittests/hack/tools
+RUN ./install_kustomize.sh && \
+    ./install_kubebuilder.sh
