--- a/examples/cluster/cluster.yaml
+++ b/examples/cluster/cluster.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: cluster.x-k8s.io/v1alpha2
+apiVersion: cluster.x-k8s.io/v1alpha3
 kind: Cluster
 metadata:
   name: ${CLUSTER_NAME}
@@ -11,11 +11,11 @@ spec:
       cidrBlocks: ["192.168.0.0/16"]
     serviceDomain: "cluster.local"
   infrastructureRef:
-    apiVersion: infrastructure.cluster.x-k8s.io/v1alpha2
+    apiVersion: infrastructure.cluster.x-k8s.io/v1alpha3
     kind: BareMetalCluster
     name: ${CLUSTER_NAME}
 ---
-apiVersion: infrastructure.cluster.x-k8s.io/v1alpha2
+apiVersion: infrastructure.cluster.x-k8s.io/v1alpha3
 kind: BareMetalCluster
 metadata:
   name: ${CLUSTER_NAME}
@@ -23,5 +23,8 @@ metadata:
 #   cloudName: ${CLUSTER_NAME}
 #   cloudsSecret:
 #     name: cloud-config
-spec: 
-  apiEndpoint: "http://192.168.111.249:6443" # IP has to match in keepalived.conf
+spec:
+  clusterName: ${CLUSTER_NAME}
+  controlPlaneEndpoint:
+    host: 192.168.111.249
+    port: 6443
