--- a/config/default/manager_image_patch.yaml
+++ b/config/default/manager_image_patch.yaml
@@ -8,5 +8,5 @@ spec:
     spec:
       containers:
       # Change the value of image field below to your controller image URL
-      - image: keleustes/cluster-api-baremetal-controller-amd64:dev
+      - image: quay.io/metal3-io/cluster-api-baremetal-controller:v1alpha2
         name: manager
