various minor fixes
- call update on machine after providerID change to ensure it is
  called on change
- call update on machine when already provisioned to reflect
  the update that triggered the reconcile
- add bmh in the machine controller tests
- add status to BMO fake CRs

--- a/examples/metal3crds/metal3.io_baremetalhosts.yaml
+++ b/examples/metal3crds/metal3.io_baremetalhosts.yaml
@@ -45,8 +45,6 @@ spec:
     - bmhost
     singular: baremetalhost
   scope: Namespaced
-  subresources:
-    status: {}
   validation:
     openAPIV3Schema:
       description: BareMetalHost is the Schema for the baremetalhosts API
@@ -236,9 +234,10 @@ spec:
                       type: string
                     clockMegahertz:
                       description: ClockSpeed is a clock speed in MHz
-                      format: int64
-                      type: integer
+                      format: double
+                      type: number
                     count:
+                      format: int64
                       type: integer
                     flags:
                       items:
