Add shortNames for bmcluster and bmmachine

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_baremetalclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_baremetalclusters.yaml
@@ -12,6 +12,9 @@ spec:
     - cluster-api
     kind: BareMetalCluster
     plural: baremetalclusters
+    shortNames:
+    - bmc
+    - bmcluster
   scope: Namespaced
   subresources:
     status: {}
