--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_baremetalmachines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_baremetalmachines.yaml
@@ -21,6 +21,9 @@ spec:
     - cluster-api
     kind: BareMetalMachine
     plural: baremetalmachines
+    shortNames:
+    - bmm
+    - bmmachine
   scope: Namespaced
   subresources:
     status: {}
