--- a/config/default/manager_image_patch.yaml
+++ b/config/default/manager_image_patch.yaml
@@ -8,5 +8,5 @@ spec:
     spec:
       containers:
       # Change the value of image field below to your controller image URL
-      - image: quay.io/metal3-io/cluster-api-provider-baremetal:v1alpha2
+      - image: quay.io/metal3-io/cluster-api-provider-baremetal:master
         name: manager
