--- a/examples/provider-components/kustomization.yaml
+++ b/examples/provider-components/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- cert-manager.yaml
+- provider-components-ctlplane.yaml
 - provider-components-kubeadm.yaml
 - provider-components-cluster-api.yaml
 - provider-components-baremetal.yaml
