--- a/examples/provider-components/kustomization.yaml
+++ b/examples/provider-components/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- cert-manager.yaml
+- provider-components-cert-manager.yaml
 - provider-components-ctlplane.yaml
 - provider-components-kubeadm.yaml
 - provider-components-cluster-api.yaml
