--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -21,6 +21,10 @@ resources:
 
 patchesStrategicMerge:
 - manager_image_patch.yaml
+- manager_label_patch.yaml
+# Protect the /metrics endpoint by putting it behind auth.
+# Only one of manager_auth_proxy_patch.yaml and
+# manager_prometheus_metrics_patch.yaml should be enabled.
 - manager_auth_proxy_patch.yaml
 # - manager_prometheus_metrics_patch.yaml
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix including the one in crd/kustomization.yaml
