--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -51,8 +51,6 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
-          - name: SECRET_NAME
-            value: $(WEBHOOK_SECRET_NAME)
         resources:
           limits:
             cpu: 100m
@@ -61,9 +59,17 @@ spec:
             cpu: 100m
             memory: 20Mi
         ports:
-        - containerPort: 9876
-          name: webhook-server
+        - containerPort: 9440
+          name: healthz
           protocol: TCP
+        readinessProbe:
+          httpGet:
+            path: /readyz
+            port: healthz
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: healthz
         volumeMounts:
         - mountPath: /tmp/cert
           name: cert
