--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_baremetalclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_baremetalclusters.yaml
@@ -1,8 +1,10 @@
 
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
+  annotations:
+    controller-gen.kubebuilder.io/version: v0.2.5
   creationTimestamp: null
   name: baremetalclusters.infrastructure.cluster.x-k8s.io
 spec:
@@ -11,26 +13,25 @@ spec:
     categories:
     - cluster-api
     kind: BareMetalCluster
+    listKind: BareMetalClusterList
     plural: baremetalclusters
     shortNames:
     - bmc
     - bmcluster
+    singular: baremetalcluster
   scope: Namespaced
-  subresources:
-    status: {}
-  version: v1alpha2
   versions:
   - additionalPrinterColumns:
-    - JSONPath: .status.ready
-      description: BaremetalCluster is Ready
+    - description: BaremetalCluster is Ready
+      jsonPath: .status.ready
       name: Ready
       type: string
-    - JSONPath: .status.errorReason
-      description: Most recent error
+    - description: Most recent error
+      jsonPath: .status.errorReason
       name: Error
       type: string
-    - JSONPath: .status.apiEndpoints
-      description: API endpoints
+    - description: API endpoints
+      jsonPath: .status.apiEndpoints
       name: APIEndpoints
       type: string
     name: v1alpha2
@@ -129,21 +130,23 @@ spec:
         type: object
     served: true
     storage: false
+    subresources:
+      status: {}
   - additionalPrinterColumns:
-    - JSONPath: .status.ready
-      description: BaremetalCluster is Ready
+    - description: BaremetalCluster is Ready
+      jsonPath: .status.ready
       name: Ready
       type: string
-    - JSONPath: .status.failureReason
-      description: Most recent error
+    - description: Most recent error
+      jsonPath: .status.failureReason
       name: Error
       type: string
-    - JSONPath: .metadata.labels.cluster\.x-k8s\.io/cluster-name
-      description: Cluster to which this BMCluster belongs
+    - description: Cluster to which this BMCluster belongs
+      jsonPath: .metadata.labels.cluster\.x-k8s\.io/cluster-name
       name: Cluster
       type: string
-    - JSONPath: .spec.controlPlaneEndpoint
-      description: Control plane endpoint
+    - description: Control plane endpoint
+      jsonPath: .spec.controlPlaneEndpoint
       name: Endpoint
       type: string
     name: v1alpha3
@@ -213,6 +216,8 @@ spec:
         type: object
     served: true
     storage: true
+    subresources:
+      status: {}
 status:
   acceptedNames:
     kind: ""
