--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -9,19 +9,19 @@ resources:
 - bases/infrastructure.cluster.x-k8s.io_baremetalmachinetemplates.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
-#patches:
+patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
-#- patches/webhook_in_baremetalmachines.yaml
-#- patches/webhook_in_baremetalclusters.yaml
-#- patches/webhook_in_baremetalmachinetemplates.yaml
+- patches/webhook_in_baremetalmachines.yaml
+- patches/webhook_in_baremetalclusters.yaml
+- patches/webhook_in_baremetalmachinetemplates.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
-#- patches/cainjection_in_baremetalmachines.yaml
-#- patches/cainjection_in_baremetalclusters.yaml
-#- patches/cainjection_in_baremetalmachinetemplates.yaml
+- patches/cainjection_in_baremetalmachines.yaml
+- patches/cainjection_in_baremetalclusters.yaml
+- patches/cainjection_in_baremetalmachinetemplates.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
