--- a/config/crd/patches/cainjection_in_baremetalmachinetemplates.yaml
+++ b/config/crd/patches/cainjection_in_baremetalmachinetemplates.yaml
@@ -5,4 +5,4 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
-  name: baremetalmachines.infrastructure.cluster.x-k8s.io
+  name: baremetalmachinetemplates.infrastructure.cluster.x-k8s.io
